# options-radar

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run.py  start-backend.sh  start-frontend.sh  start-mock.sh  start-simulation.sh  test_api_readiness.py
backend/: __init__.py  config.py  demo_stream.py  main.py  run_backtest.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase6.py
backend/backtest/: __init__.py  directional.py  sentiment_collector.py
backend/data/: __init__.py  aggregator.py  alpaca_account.py  alpaca_client.py  alpaca_rest.py  alpaca_trader.py  databento_loader.py  earnings_calendar.py  eodhd_client.py  finnhub_client.py  iv_rank_calculator.py  market_hours.py  mock_data.py  mock_trader.py  options_cache.py  orats_client.py  price_indicators.py  quiver_client.py  sentiment_aggregator.py  simulation.py  staleness.py  subscription_manager.py  technicals.py  vix_client.py
backend/engine/: __init__.py  auto_executor.py  gates.py  momentum_signals.py  pipeline.py  (+7 more)
backtest_results_repo/: backtest_2022_baseline_momentum.json  backtest_2024_baseline_momentum.json
docs/: OPTIONS_TRADING_SYSTEM_SPEC.md  PHASE0_FINDINGS.md  SCALPING_BACKTEST_RESULTS.md  SCALPING_IMPROVEMENT_PROMPT.md  SCALPING_MODULE_DESIGN.md  SCALPING_MODULE_IMPLEMENTATION.md
frontend/: index.html  package-lock.json  package.json
scripts/: fetch_random_weeks.py  fetch_second_bars.py  run_full_year_backtest.py  test_second_bars.py
tests/: __init__.py  test_canonical.py  test_gates.py  test_pipeline.py  test_subscription_manager.py
(+58 files in other folders)
